// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json-filtering(mysql) array_contains([1, 2, 3]) 1`] = `
[
  {
    json: {
      array: [
        1,
        2,
        3,
        4,
      ],
      number: 1,
      object: {
        a: 1,
        b: 2,
        c: 3,
      },
      string: ab,
    },
  },
]
`;

exports[`json-filtering(mysql) array_ends_with(12) 1`] = `
[
  {
    json: {
      array: [
        9,
        10,
        11,
        12,
      ],
      number: 3,
      object: {
        a: 7,
        b: 8,
        c: 9,
      },
      string: cd,
    },
  },
]
`;

exports[`json-filtering(mysql) array_starts_with(5) 1`] = `
[
  {
    json: {
      array: [
        5,
        6,
        7,
        8,
      ],
      number: 2,
      object: {
        a: 4,
        b: 5,
        c: 6,
      },
      string: bc,
    },
  },
]
`;

exports[`json-filtering(mysql) filter with Prisma.AnyNull 1`] = `
[
  {
    json: {
      array: [
        9,
        10,
        11,
        12,
      ],
      number: 3,
      object: {
        a: 7,
        b: 8,
        c: 9,
      },
      string: cd,
    },
  },
  {
    json: {
      array: [
        5,
        6,
        7,
        8,
      ],
      number: 2,
      object: {
        a: 4,
        b: 5,
        c: 6,
      },
      string: bc,
    },
  },
  {
    json: {
      array: [
        1,
        2,
        3,
        4,
      ],
      number: 1,
      object: {
        a: 1,
        b: 2,
        c: 3,
      },
      string: ab,
    },
  },
]
`;

exports[`json-filtering(mysql) filter with Prisma.DbNull 1`] = `
[
  {
    json: {
      array: [
        9,
        10,
        11,
        12,
      ],
      number: 3,
      object: {
        a: 7,
        b: 8,
        c: 9,
      },
      string: cd,
    },
  },
  {
    json: {
      array: [
        1,
        2,
        3,
        4,
      ],
      number: 1,
      object: {
        a: 1,
        b: 2,
        c: 3,
      },
      string: ab,
    },
  },
]
`;

exports[`json-filtering(mysql) filter with Prisma.JsonNull 1`] = `
[
  {
    json: {
      array: [
        5,
        6,
        7,
        8,
      ],
      number: 2,
      object: {
        a: 4,
        b: 5,
        c: 6,
      },
      string: bc,
    },
  },
]
`;

exports[`json-filtering(mysql) gt(2) 1`] = `
[
  {
    json: {
      array: [
        9,
        10,
        11,
        12,
      ],
      number: 3,
      object: {
        a: 7,
        b: 8,
        c: 9,
      },
      string: cd,
    },
  },
]
`;

exports[`json-filtering(mysql) gte(2) 1`] = `
[
  {
    json: {
      array: [
        9,
        10,
        11,
        12,
      ],
      number: 3,
      object: {
        a: 7,
        b: 8,
        c: 9,
      },
      string: cd,
    },
  },
  {
    json: {
      array: [
        5,
        6,
        7,
        8,
      ],
      number: 2,
      object: {
        a: 4,
        b: 5,
        c: 6,
      },
      string: bc,
    },
  },
]
`;

exports[`json-filtering(mysql) lt(2) 1`] = `
[
  {
    json: {
      array: [
        1,
        2,
        3,
        4,
      ],
      number: 1,
      object: {
        a: 1,
        b: 2,
        c: 3,
      },
      string: ab,
    },
  },
]
`;

exports[`json-filtering(mysql) lt(2) 2`] = `
[
  {
    json: {
      array: [
        1,
        2,
        3,
        4,
      ],
      number: 1,
      object: {
        a: 1,
        b: 2,
        c: 3,
      },
      string: ab,
    },
  },
]
`;

exports[`json-filtering(mysql) lte(2) 1`] = `
[
  {
    json: {
      array: [
        5,
        6,
        7,
        8,
      ],
      number: 2,
      object: {
        a: 4,
        b: 5,
        c: 6,
      },
      string: bc,
    },
  },
  {
    json: {
      array: [
        1,
        2,
        3,
        4,
      ],
      number: 1,
      object: {
        a: 1,
        b: 2,
        c: 3,
      },
      string: ab,
    },
  },
]
`;

exports[`json-filtering(mysql) string_contains(bc) 1`] = `
[
  {
    json: {
      array: [
        5,
        6,
        7,
        8,
      ],
      number: 2,
      object: {
        a: 4,
        b: 5,
        c: 6,
      },
      string: bc,
    },
  },
]
`;

exports[`json-filtering(mysql) string_ends_with(c) 1`] = `
[
  {
    json: {
      array: [
        5,
        6,
        7,
        8,
      ],
      number: 2,
      object: {
        a: 4,
        b: 5,
        c: 6,
      },
      string: bc,
    },
  },
]
`;

exports[`json-filtering(mysql) string_starts_with(a) 1`] = `
[
  {
    json: {
      array: [
        1,
        2,
        3,
        4,
      ],
      number: 1,
      object: {
        a: 1,
        b: 2,
        c: 3,
      },
      string: ab,
    },
  },
]
`;
